--- a/src/gui/listCellBase.css
+++ b/src/gui/listCellBase.css
@@ -8,7 +8,9 @@
      -fx-text-inner-color: white;
      -fx-background-color: #535353;
 }
-
+.list-view .list-cell:empty {
+    -fx-opacity: 0;
+}
 .list-view {
     -fx-background-color: #212121;
     -fx-border-color: #232323;
@@ -30,3 +32,5 @@
 .list-view .label {
     -fx-text-fill: white;
 }
+
+
