--- a/src/gui/listCellBase.fxml
+++ b/src/gui/listCellBase.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="pane" prefHeight="400.0" prefWidth="480.0" style="-fx-background-color: #212121;" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="pane" centerShape="false" prefHeight="839.0" prefWidth="468.0" scaleShape="false" style="-fx-background-color: #212121;" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <JFXListView fx:id="detailsList" layoutX="13.0" layoutY="56.0" prefHeight="331.0" prefWidth="460.0" style="-fx-background-color: #535353;" stylesheets="@listCellBase.css" />
+      <JFXListView fx:id="detailsList" layoutX="13.0" layoutY="56.0" prefHeight="731.0" prefWidth="445.0" style="-fx-background-color: #535353;" stylesheets="@listCellBase.css" />
       <Label fx:id="headTitle" layoutX="14.0" layoutY="21.0" text="Label" textFill="WHITE">
          <font>
             <Font name="System Bold" size="14.0" />
