--- a/src/main/resources/gui.fxml
+++ b/src/main/resources/gui.fxml
@@ -12,5 +12,6 @@
       <JFXTextField fx:id="searchText" focusColor="#28f16e" layoutX="228.0" layoutY="45.0" prefHeight="25.0" prefWidth="314.0" style="-fx-text-inner-color: WHITE; -fx-prompt-text-fill: WHITE;" unFocusColor="#1db954" />
       <JFXListView fx:id="resultList" layoutX="42.0" layoutY="100.0" prefHeight="656.0" prefWidth="500.0" style="-fx-background-color: #212121; -fx-text-inner-color: WHITE; -fx-prompt-text-fill: WHITE;" stylesheets="@gui.css" />
       <JFXButton fx:id="searchButton" layoutX="574.0" layoutY="45.0" mnemonicParsing="false" onAction="#handleSearchButtonAction" ripplerFill="#28f470" style="-fx-background-color: #1db954;" text="Search" textFill="WHITE" />
+      <JFXListView fx:id="wishList" layoutX="626.0" layoutY="100.0" prefHeight="656.0" prefWidth="500.0" style="-fx-background-color: #212121; -fx-text-inner-color: WHITE; -fx-prompt-text-fill: WHITE;" stylesheets="@gui.css" />
    </children>
 </AnchorPane>
